--- a/server/styles/main.scss
+++ b/server/styles/main.scss
@@ -31,26 +31,20 @@ a {
   user-select: none;
 }
 
-.hide {
-  display: none;
-}
-
-header, main, footer {
+header {
   position: absolute;
   width: 100%;
 }
 
 header {
-  top: 2em;
+  top: 0;
 }
 
 main {
-  height: 100%;
-  padding: 5em;
+  padding: 8em;
 }
 
 footer {
-  bottom: 2em;
 }
 
 nav {
